test/libsolidity/syntaxTests/enums/global_enum_contract_name_clash.sol
enum E { A }
contract E {}
// ----
// DeclarationError 2333: (13-26='contract E {}'): Identifier already declared.
